--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@aws-sdk/client-cognito-identity-provider": "^3.261.0",
     "@aws-sdk/client-dynamodb": "^3.261.0",
     "@aws-sdk/client-s3": "^3.261.0",
+    "@aws-sdk/lib-dynamodb": "^3.266.1",
     "dotenv": "^16.0.3",
     "serverless-plugin-dotenv": "^1.0.0",
     "ulid": "^2.3.0"
@@ -14,7 +15,10 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.101",
     "@types/node": "^18.11.18",
+    "esbuild": "^0.17.6",
     "serverless": "^3.21.0",
+    "serverless-dotenv-plugin": "^4.0.2",
+    "serverless-esbuild": "^1.37.3",
     "serverless-offline": "^12.0.4",
     "serverless-plugin-typescript": "^2.1.4",
     "typescript": "^4.9.5"
